--- a/deepsea.org
+++ b/deepsea.org
@@ -1,4 +1,4 @@
-* TODO [[https://mail.google.com/mail/u/0/#inbox/FMfcgxwGCQVkqmjbnphMpFTmtVNBKTTk][Deep Sea and BP excel doc]]
+* DONE [[https://mail.google.com/mail/u/0/#inbox/FMfcgxwGCQVkqmjbnphMpFTmtVNBKTTk][Deep Sea and BP excel doc]]
   DEADLINE: <2021-04-29 Thu>
 
 
